--- a/landing/templates/landing/index.html
+++ b/landing/templates/landing/index.html
@@ -65,9 +65,25 @@
         <h2 class="fw-bold">Get The-Off-Season-Program Guide Now!</h2>
         <form method="POST" class="mt-4">
             {% csrf_token %}
-            <input type="text" name="nickname" class="form-control mb-3 input-width  mx-auto" placeholder="Your Nickname" required>
-            <input type="email" name="email" class="form-control mb-3 input-width mx-auto" placeholder="Your Email" required>
-            <button type="submit" class="btn btn-info btn-lg">Submit</button>
+            <div class="mb-3">
+                {{ form.nickname.label_tag }}
+                {{ form.nickname }}
+                {% if form.nickname.errors %}
+                    <div class="text-danger">
+                        {{ form.nickname.errors|join:", " }}
+                    </div>
+                {% endif %}
+            </div>
+            <div class="mb-3">
+                {{ form.email.label_tag }}
+                {{ form.email }}
+                {% if form.email.errors %}
+                    <div class="text-danger">
+                        {{ form.email.errors|join:", " }}
+                    </div>
+                {% endif %}
+            </div>
+            <button type="submit" class="btn btn-info btn-lg mt-4">Submit</button>
         </form>
     </section>
 
