--- a/landing/templates/landing/index.html
+++ b/landing/templates/landing/index.html
@@ -7,6 +7,14 @@
     <meta name="description" content="Discover drills GAA players use to improve explosiveness, speed, and aggression with the free Off-Season Program! Perfect for footballers in their 20s looking to stay ahead.">
     <meta name="keywords" content="GAA drills, football training, speed training, agility drills, off-season program">
     <meta name="author" content="Simon Moynihan">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'landing/images/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'landing/images/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'landing/images/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'landing/images/site.webmanifest' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'landing/images/favicon.ico' %}">
+    <link rel="shortcut icon" href="{% static 'landing/images/favicon.ico' %}">
+    <link rel="icon" type="image/png" sizes="192x192" href="{% static 'landing/images/android-chrome-192x192.png' %}">
+    <link rel="icon" type="image/png" sizes="512x512" href="{% static 'landing/images/android-chrome-512x512.png' %}">
     <title>Off-Season Program</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
