--- a/landing/templates/landing/index.html
+++ b/landing/templates/landing/index.html
@@ -23,7 +23,7 @@
 <body>
     <!-- Hero Section -->
     <section class="hero text-center d-flex flex-column justify-content-center align-items-center">
-        <p class="lead fade-in">Footballers Discover The...</p>
+        <p class="lead fade-in mt-3">Footballers Discover The...</p>
 
         <!-- Main Heading for Larger Screens -->
         <h1 class="display-4 fw-bold fade-in main-heading">Drills GAA Players Are Using To Improve Explosiveness And Aggression While Becoming Lighter On Their Feet Before The Season Starts!</h1>
@@ -36,7 +36,7 @@
         </p>
 
         <img src="{% static 'landing/images/off-season-program.jpeg' %}" alt="Book Cover" class="img-fluid my-4 fade-in" style="max-width: 300px;">
-        <a href="#download" class="main-signup-btn btn btn-info btn-lg mt-4 fade-in">Signup for free off-season program ⬇</a>
+        <a href="#download" class="main-signup-btn btn btn-info btn-lg mt-4 mb-4 fade-in">Signup for free off-season program ⬇</a>
     </section>
 
     <!-- FACT Section -->
