--- a/landing/templates/landing/index.html
+++ b/landing/templates/landing/index.html
@@ -22,8 +22,8 @@
 </head>
 <body>
     <!-- Hero Section -->
-    <section class="hero text-center d-flex flex-column justify-content-center align-items-center">
-        <p class="lead fade-in mt-3">Footballers Discover The...</p>
+    <section class="mobile-top-margin hero text-center d-flex flex-column justify-content-center align-items-center">
+        <p class="lead fade-in">Footballers Discover The...</p>
 
         <!-- Main Heading for Larger Screens -->
         <h1 class="display-4 fw-bold fade-in main-heading">Drills GAA Players Are Using To Improve Explosiveness And Aggression While Becoming Lighter On Their Feet Before The Season Starts!</h1>
