--- a/landing/templates/landing/index.html
+++ b/landing/templates/landing/index.html
@@ -46,11 +46,12 @@
             <p class="lead">
                 As footballers push on in their 20s, they need to double down on their training in order to keep up with the quicker lads.
             </p>
-            <p>
+            <p class="lead">
                 The Free Off-Season Program will tell you exactly what to do to keep up with the youngest – and best – players you come across!
             </p>
         </div>
     </section>
+    <hr>
 
     <!-- Features Section -->
     <section class="features container py-5">
