Add class to html

--- a/landing/templates/landing/index.html
+++ b/landing/templates/landing/index.html
@@ -23,7 +23,7 @@
 <body>
     <!-- Hero Section -->
     <section class="hero text-center d-flex flex-column justify-content-center align-items-center">
-        <p class="lead fade-in mobile-top-margin">Footballers Discover The...</p>
+        <p class="lead fade-in top-text">Footballers Discover The...</p>
 
         <!-- Main Heading for Larger Screens -->
         <h1 class="display-4 fw-bold fade-in main-heading">Drills GAA Players Are Using To Improve Explosiveness And Aggression While Becoming Lighter On Their Feet Before The Season Starts!</h1>
