--- a/landing/templates/landing/index.html
+++ b/landing/templates/landing/index.html
@@ -18,12 +18,13 @@
     <title>Off-Season Program</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'landing/css/optin.css' %}">
+    <link rel="stylesheet" href="{% static 'landing/css/optin.css' %}?v=2">
+
 </head>
 <body>
     <!-- Hero Section -->
     <section class="hero text-center d-flex flex-column justify-content-center align-items-center">
-        <p class="lead fade-in mt-5">Footballers Discover The...</p>
+        <p class="lead fade-in top-text">Footballers Discover The...</p>
 
         <!-- Main Heading for Larger Screens -->
         <h1 class="display-4 fw-bold fade-in main-heading">Drills GAA Players Are Using To Improve Explosiveness And Aggression While Becoming Lighter On Their Feet Before The Season Starts!</h1>
@@ -35,8 +36,8 @@
             Without getting Injured, hating football in the process, or setting your wallet on fire.
         </p>
 
-        <img src="{% static 'landing/images/off-season-program.jpeg' %}" alt="Book Cover" class="img-fluid my-4 fade-in" style="max-width: 300px;">
-        <a href="#download" class="main-signup-btn btn btn-info btn-lg mt-4 mb-4 fade-in">Signup for free off-season program ⬇</a>
+        <img src="{% static 'landing/images/off-season-program.jpeg' %}" alt="Book Cover" class="img-fluid my-4 fade-in program-book" style="max-width: 300px;">
+        <a href="#download" class="main-signup-btn btn btn-info btn-lg mt-4 fade-in">Signup for free off-season program ⬇</a>
     </section>
 
     <!-- FACT Section -->
