Fix html grammar

--- a/landing/templates/landing/index.html
+++ b/landing/templates/landing/index.html
@@ -24,7 +24,7 @@
 <body>
     <!-- Hero Section -->
     <section class="hero text-center d-flex flex-column justify-content-center align-items-center">
-        <p class="lead fade-in top-text">Footballers Discover The...</p>
+        <p class="lead fade-in top-text">Footballers, Discover The...</p>
 
         <!-- Main Heading for Larger Screens -->
         <h1 class="display-4 fw-bold fade-in main-heading">Drills GAA Players Are Using To Improve Explosiveness And Aggression While Becoming Lighter On Their Feet Before The Season Starts!</h1>
@@ -33,11 +33,11 @@
         <h1 class="display-6 fw-bold fade-in mobile-heading">Drills GAA Players Use To Improve Speed, Power, and Agility Before the Season Starts!</h1>
 
         <p class="lead">
-            Without getting Injured, hating football in the process, or setting your wallet on fire.
+            Without getting Injured, hating football, or setting your wallet on fire.
         </p>
 
         <img src="{% static 'landing/images/off-season-program.jpeg' %}" alt="Book Cover" class="img-fluid my-4 fade-in program-book" style="max-width: 300px;">
-        <a href="#download" class="main-signup-btn btn btn-info btn-lg mt-4 fade-in">Signup for free off-season program ⬇</a>
+        <a href="#download" class="main-signup-btn btn btn-info btn-lg mt-4 fade-in">Signup for the free off-season program ⬇</a>
     </section>
 
     <!-- FACT Section -->
