Fix html grammar #2

--- a/landing/templates/landing/index.html
+++ b/landing/templates/landing/index.html
@@ -33,7 +33,7 @@
         <h1 class="display-6 fw-bold fade-in mobile-heading">Drills GAA Players Use To Improve Speed, Power, and Agility Before the Season Starts!</h1>
 
         <p class="lead">
-            Without getting Injured, hating football, or setting your wallet on fire.
+            Without getting injured, hating football, or setting your wallet on fire in the process.
         </p>
 
         <img src="{% static 'landing/images/off-season-program.jpeg' %}" alt="Book Cover" class="img-fluid my-4 fade-in program-book" style="max-width: 300px;">
@@ -48,7 +48,7 @@
                 As footballers push on in their 20s, they need to double down on their training in order to keep up with the quicker lads.
             </p>
             <p class="lead">
-                The Free Off-Season Program will tell you exactly what to do to keep up with the youngest – and best – players you come across!
+                The <b>Free</b> Off-Season Program will tell you exactly what to do to keep up with the youngest – and the best – players you come across!
             </p>
         </div>
     </section>
