--- a/landing/templates/landing/index.html
+++ b/landing/templates/landing/index.html
@@ -48,7 +48,7 @@
                 As footballers push on in their 20s, they need to double down on their training in order to keep up with the quicker lads.
             </p>
             <p class="lead">
-                The <b>Free</b> Off-Season Program will tell you exactly what to do to keep up with the youngest – and the best – players you come across!
+                The <strong>Free</strong> Off-Season Program will tell you exactly what to do to keep up with the youngest – and the best – players you come across!
             </p>
         </div>
     </section>
